// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<GameArea> snapshots > matches 1`] = `
<main
  class="player1"
  title="Hive Game Area"
>
  <aside
    aria-label="PLayer pieces not yet on the board"
    class="players"
  >
    <section
      aria-label="Player 1's unplaced pieces"
      class="player player0"
    >
      <h2>
        Player 1
      </h2>
      <div
        class="tiles"
      />
    </section>
    <section
      aria-label="Player 2's unplaced pieces"
      class="player player1"
    >
      <h2>
        Player 2
      </h2>
      <div
        class="tiles"
      >
        <div
          class="player1 hex tile ant"
          draggable="false"
          title="Player-1 ant"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
            <use
              href="#ant"
            />
          </svg>
        </div>
      </div>
    </section>
  </aside>
  <section
    title="Game playing area"
  >
    <nav>
      <a
        href="http://localhost:3000/game/33/0"
        name="Share game to opponent"
        title="Share"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#share"
          />
        </svg>
      </a>
      <a
        href="/"
        name="New game!"
        title="New Game"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#new"
          />
        </svg>
      </a>
      <a
        href="#"
        name="Show rules"
        title="Rules"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#rules"
          />
        </svg>
      </a>
      <a
        class="ai-off"
        href="#"
        name="Toggle Ai"
        title="Toggle Ai"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#ai"
          />
        </svg>
      </a>
      <a
        class="github"
        href="https://github.com/SpiralLogic/hive"
        title="Source code"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#github"
          />
        </svg>
      </a>
    </nav>
    <div
      class="left"
      role="grid"
    >
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
          <div
            class="player0 hex tile beetle"
            draggable="false"
            title="Player-0 beetle"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
              <use
                href="#beetle"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
  <dialog
    aria-label="Player Connected"
    class="player-connected"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Player has 
      
      !
    </p>
  </dialog>
  <dialog
    aria-label="Game Rules"
    class="rules"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <div>
      <div
        class="menu"
      >
        <button
          title="Previous"
        >
          &lt;
        </button>
        <h3>
          Objective
        </h3>
        <button
          autofocus=""
          title="Next"
        >
          &gt;
        </button>
      </div>
      <ul>
        <li>
          The first player to have a surrounded queen loses
        </li>
        <li>
          Queens must be in the hive to move creatures
        </li>
        <li>
          Placements into the hive must touch friendly pieces
        </li>
      </ul>
      <div
        class="left"
        role="grid"
      >
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile spider"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#spider"
                />
              </svg>
            </div>
          </div>
          <div
            class="correct"
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile queen"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#queen"
                />
              </svg>
              <span>
                ✓
              </span>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile beetle"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#beetle"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </dialog>
  <dialog
    aria-label="Linked Shared"
    class="share"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Opponent's link has been copied to clipboard!
    </p>
  </dialog>
  <dialog
    aria-label="Game Over"
    class="game-over"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      
    </p>
    <button
      autofocus=""
      title="New Game"
    >
      New Game
    </button>
  </dialog>
</main>
`;

exports[`<GameArea> snapshots > matches game over 1`] = `
<main
  class="game-over"
  title="Hive Game Area"
>
  <aside
    aria-label="PLayer pieces not yet on the board"
    class="players"
  >
    <section
      aria-label="Player 1's unplaced pieces"
      class="player player0"
    >
      <h2>
        Player 1
      </h2>
      <div
        class="tiles"
      />
    </section>
    <section
      aria-label="Player 2's unplaced pieces"
      class="player player1"
    >
      <h2>
        Player 2
      </h2>
      <div
        class="tiles"
      >
        <div
          class="player1 hex tile ant"
          draggable="false"
          title="Player-1 ant"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
            <use
              href="#ant"
            />
          </svg>
        </div>
      </div>
    </section>
  </aside>
  <section
    title="Game playing area"
  >
    <nav>
      <a
        href="http://localhost:3000/game/33/1"
        name="Share game to opponent"
        title="Share"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#share"
          />
        </svg>
      </a>
      <a
        href="/"
        name="New game!"
        title="New Game"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#new"
          />
        </svg>
      </a>
      <a
        href="#"
        name="Show rules"
        title="Rules"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#rules"
          />
        </svg>
      </a>
      <a
        class="ai-off"
        href="#"
        name="Toggle Ai"
        title="Toggle Ai"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#ai"
          />
        </svg>
      </a>
      <a
        class="github"
        href="https://github.com/SpiralLogic/hive"
        title="Source code"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#github"
          />
        </svg>
      </a>
    </nav>
    <div
      class="left"
      role="grid"
    >
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
          <div
            class="player0 hex tile beetle"
            draggable="false"
            title="Player-0 beetle"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
              <use
                href="#beetle"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
  <dialog
    aria-label="Player Connected"
    class="player-connected"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Player has 
      
      !
    </p>
  </dialog>
  <dialog
    aria-label="Game Rules"
    class="rules"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <div>
      <div
        class="menu"
      >
        <button
          title="Previous"
        >
          &lt;
        </button>
        <h3>
          Objective
        </h3>
        <button
          autofocus=""
          title="Next"
        >
          &gt;
        </button>
      </div>
      <ul>
        <li>
          The first player to have a surrounded queen loses
        </li>
        <li>
          Queens must be in the hive to move creatures
        </li>
        <li>
          Placements into the hive must touch friendly pieces
        </li>
      </ul>
      <div
        class="left"
        role="grid"
      >
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile spider"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#spider"
                />
              </svg>
            </div>
          </div>
          <div
            class="correct"
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile queen"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#queen"
                />
              </svg>
              <span>
                ✓
              </span>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile beetle"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#beetle"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </dialog>
  <dialog
    aria-label="Linked Shared"
    class="share"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Opponent's link has been copied to clipboard!
    </p>
  </dialog>
  <dialog
    aria-label="Game Over"
    class="game-over"
    open="true"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Game is over
    </p>
    <button
      autofocus=""
      title="New Game"
    >
      New Game
    </button>
  </dialog>
</main>
`;

exports[`<GameArea> snapshots > matches with historical move 1`] = `
<main
  class="player0"
  title="Hive Game Area"
>
  <aside
    aria-label="PLayer pieces not yet on the board"
    class="players"
  >
    <section
      aria-label="Player 1's unplaced pieces"
      class="player player0"
    >
      <h2>
        Player 1
      </h2>
      <div
        class="tiles"
      />
    </section>
    <section
      aria-label="Player 2's unplaced pieces"
      class="player player1"
    >
      <h2>
        Player 2
      </h2>
      <div
        class="tiles"
      >
        <div
          class="player1 hex tile ant"
          draggable="false"
          title="Player-1 ant"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
            <use
              href="#ant"
            />
          </svg>
        </div>
      </div>
    </section>
  </aside>
  <section
    title="Game playing area"
  >
    <nav>
      <a
        href="http://localhost:3000/game/33/1"
        name="Share game to opponent"
        title="Share"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#share"
          />
        </svg>
      </a>
      <a
        href="/"
        name="New game!"
        title="New Game"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#new"
          />
        </svg>
      </a>
      <a
        href="#"
        name="Show rules"
        title="Rules"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#rules"
          />
        </svg>
      </a>
      <a
        class="ai-off"
        href="#"
        name="Toggle Ai"
        title="Toggle Ai"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#ai"
          />
        </svg>
      </a>
      <a
        class="github"
        href="https://github.com/SpiralLogic/hive"
        title="Source code"
      >
        <svg
          viewBox="0 0 100 100"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            href="#github"
          />
        </svg>
      </a>
    </nav>
    <div
      class="left"
      role="grid"
    >
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          class="historical"
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
      <div
        role="row"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="historical"
          role="cell"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
          <div
            class="player0 hex tile beetle"
            draggable="false"
            title="Player-0 beetle"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
              <use
                href="#beetle"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        role="none"
      >
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
        <div
          class="hide"
          role="none"
        >
          <svg
            viewBox="0 0 100 100"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              href="#hex"
            />
          </svg>
        </div>
      </div>
    </div>
  </section>
  <dialog
    aria-label="Player Connected"
    class="player-connected"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Player has 
      
      !
    </p>
  </dialog>
  <dialog
    aria-label="Game Rules"
    class="rules"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <div>
      <div
        class="menu"
      >
        <button
          title="Previous"
        >
          &lt;
        </button>
        <h3>
          Objective
        </h3>
        <button
          autofocus=""
          title="Next"
        >
          &gt;
        </button>
      </div>
      <ul>
        <li>
          The first player to have a surrounded queen loses
        </li>
        <li>
          Queens must be in the hive to move creatures
        </li>
        <li>
          Placements into the hive must touch friendly pieces
        </li>
      </ul>
      <div
        class="left"
        role="grid"
      >
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile spider"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#spider"
                />
              </svg>
            </div>
          </div>
          <div
            class="correct"
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile queen"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#queen"
                />
              </svg>
              <span>
                ✓
              </span>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile beetle"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#beetle"
                />
              </svg>
            </div>
          </div>
        </div>
        <div
          role="row"
        >
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile ant"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#ant"
                />
              </svg>
            </div>
          </div>
          <div
            class=""
            role="cell"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
            <div
              class="tile grasshopper"
            >
              <svg
                viewBox="0 0 100 100"
                xmlns="http://www.w3.org/2000/svg"
              >
                <use
                  href="#hex"
                />
                <use
                  href="#grasshopper"
                />
              </svg>
            </div>
          </div>
           
          <div
            role="none"
          >
            <svg
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <use
                href="#hex"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </dialog>
  <dialog
    aria-label="Linked Shared"
    class="share"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      Opponent's link has been copied to clipboard!
    </p>
  </dialog>
  <dialog
    aria-label="Game Over"
    class="game-over"
  >
    <button
      aria-label="Close Dialog"
      class="close"
    >
      X
    </button>
    <p>
      
    </p>
    <button
      autofocus=""
      title="New Game"
    >
      New Game
    </button>
  </dialog>
</main>
`;
